# vertz

./: .biomeignore  .env.example  .env.test  .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  API_CONVENTIONS.md  CLAUDE.md  CONTRIBUTING.md  DEMO-TOOLKIT-MIGRATION.md  IDENTITY.md  MANIFESTO.md  MAP.md  MEMORY.md  PROCESS.md  PR_SUMMARY.md  QUICKSTART.md  README.md  RELEASING.md  RULES.md  SOUL.md  SSR_IMPLEMENTATION_STATUS.md  USER.md  VISION.md  biome.json  bunfig.toml  ci.config.ts  codecov.yml  dagger.json  docker-compose.yml  doppler.json  happydom.ts  install.sh  issue-body.txt  lefthook.yml  mint.json  package.json  pr-body.md  pr-review-body.md  (+4 more)
native/: Cargo.toml
native/chromium-poc/: Cargo.toml
native/chromium-poc/src/: main.rs
native/vertz-compiler/: CHANGELOG.md  Cargo.toml  package.json  postinstall.cjs  turbo.json
native/vertz-compiler-core/: Cargo.toml
native/vertz-compiler-core/src/: aot_string_transformer.rs  component_analyzer.rs  computed_transformer.rs  context_stable_ids.rs  css_diagnostics.rs  css_token_tables.rs  css_transform.rs  css_unitless.rs  field_selection.rs  html_entities.rs  import_injection.rs  innerhtml_diagnostics.rs  jsx_transformer.rs  lib.rs  magic_string.rs  mock_hoisting.rs  mutation_transformer.rs  props_transformer.rs  reactive_guard_transformer.rs  reactivity_analyzer.rs  route_splitting.rs  signal_transformer.rs  spy_exports.rs  typescript_strip.rs
native/vertz-compiler-core/tests/: compile_benchmarks.rs
native/vertz-compiler/__tests__/: aot-ssr.test.ts  body-jsx-diagnostics.test.ts  build-transform-benchmark.test.ts  build-transform-parity.test.ts  component-analysis.test.ts  computed-transform.test.ts  context-stable-ids.test.ts  cross-compiler-equivalence.test.ts  cross-file-manifest.test.ts  css-diagnostics.test.ts  css-transform.test.ts  fast-refresh.test.ts  field-selection.test.ts  hydration-markers.test.ts  import-injection.test.ts  jsx-transform.test.ts  load-compiler.ts  mount-frame.test.ts  mutation-diagnostics.test.ts  mutation-transform.test.ts  native-compiler.test.ts  prefetch-manifest.test.ts  props-destructuring.test.ts  query-auto-thunk.test.ts  reactive-guards.test.ts  reactivity-analysis.test.ts  route-splitting.test.ts  signal-transform.test.ts  ssr-safety-diagnostics.test.ts  typescript-strip.test.ts
native/vertz-compiler/__tests__/parity/: parity-1911.test.ts
native/vertz-compiler/src/: aot_string_transformer.rs  body_jsx_diagnostics.rs  component_analyzer.rs  computed_transformer.rs  context_stable_ids.rs  css_diagnostics.rs  css_token_tables.rs  css_transform.rs  fast_refresh.rs  field_selection.rs  hydration_markers.rs  import_injection.rs  jsx_transformer.rs  lib.rs  magic_string.rs  mount_frame_transformer.rs  mutation_diagnostics.rs  mutation_transformer.rs  prefetch_manifest.rs  props_transformer.rs  query_auto_thunk.rs  reactivity_analyzer.rs  route_splitting.rs  signal_api_registry.rs  signal_transformer.rs  ssr_safety_diagnostics.rs  typescript_strip.rs
native/vertz-runtime/: Cargo.toml
native/vertz-runtime/src/: banner.rs  cli.rs  config.rs  lib.rs  main.rs
native/vertz-runtime/src/assets/: error-overlay.js  fast-refresh-runtime.js  hmr-client.js
native/vertz-runtime/src/compiler/: cache.rs  import_rewriter.rs  pipeline.rs
native/vertz-runtime/src/errors/: broadcaster.rs  categories.rs  mod.rs  suggestions.rs  terminal.rs
native/vertz-runtime/src/hmr/: mod.rs  protocol.rs  websocket.rs
native/vertz-runtime/src/pm/: config.rs  github.rs  linker.rs  lockfile.rs  mod.rs  output.rs  overrides.rs  pack.rs  patch.rs  registry.rs  resolver.rs  scripts.rs  tarball.rs  types.rs  vertzrc.rs  workspace.rs
native/vertz-runtime/src/runtime/: async_context.rs  js_runtime.rs  mod.rs  module_loader.rs  persistent_isolate.rs
native/vertz-runtime/src/server/: diagnostics.rs  html_shell.rs  http.rs  mcp.rs  mcp_events.rs  mod.rs  module_server.rs
native/vertz-runtime/src/ssr/: async_local_storage.rs  dom_shim.rs  html_document.rs  hydration.rs  render.rs  session.rs
native/vertz-runtime/src/test/: collector.rs  config.rs  coverage.rs  dom_shim.rs  executor.rs  globals.rs  mod.rs  runner.rs  snapshot.rs  typetests.rs  watch.rs
native/vertz-runtime/src/typecheck/: parser.rs  process.rs
native/vertz-runtime/src/watcher/: dep_watcher.rs  file_watcher.rs  mod.rs
native/vertz-runtime/tests/: client_render.rs  pm_integration.rs  pm_introspection.rs  pm_publish.rs  sqlite_integration.rs  ssr_render.rs  test_runner.rs  v8_integration.rs
native/vtz/: Cargo.toml  build.rs
native/vtz/benches/: signal_graph.rs
native/vtz/examples/: webview_poc.rs
native/vtz/src/: banner.rs  cli.rs  config.rs  ipc_permissions.rs  lib.rs  main.rs  self_update.rs
native/vtz/src/assets/: error-overlay.js  fast-refresh-helpers.js  fast-refresh-runtime.js  hmr-client.js  interact-client.js
native/vtz/src/bridge/: command.rs  events.rs  health.rs  mod.rs  tools.rs
native/vtz/src/ci/: cache.rs  changes.rs  config.rs  graph.rs  logs.rs  mod.rs  scheduler.rs  types.rs  workspace.rs
native/vtz/src/compiler/: import_rewriter.rs  pipeline.rs
native/vtz/src/errors/: broadcaster.rs  categories.rs  source_mapper.rs  suggestions.rs
native/vtz/src/plugin/: mod.rs  react.rs  vertz.rs
native/vtz/src/pm/: bin.rs  config.rs  create.rs  error.rs  linker.rs  lockfile.rs  mod.rs  overrides.rs  pack.rs  platform.rs  registry.rs  resolver.rs  scripts.rs  tarball.rs  types.rs  vertzrc.rs  workspace.rs
native/vtz/src/runtime/: compile_cache.rs  entity_graph.rs  isolate_label.rs  isolate_supervisor.rs  js_runtime.rs  message_bus.rs  mod.rs  module_loader.rs  persistent_isolate.rs  signal_graph.rs  signal_graph_tests.rs  snapshot.rs
native/vtz/src/server/: api_proxy.rs  audit_log.rs  auto_installer.rs  mcp.rs  (+13 more)
native/vtz/tests/: cli_inspect_flags.rs  client_render.rs  entity_graph.rs  error_overlay.rs  http_multi_isolate.rs  inspector_brk.rs  inspector_restart.rs  inspector_server.rs  isolate_swap_race.rs  kill_gate.rs  screenshot_e2e.rs  sqlite_integration.rs  ssr_render.rs  test_runner.rs  v8_integration.rs
(+2736 files in other folders)
