[workspace]
resolver = "2"
members = ["vertz-compiler", "vertz-compiler-core", "vertz-runtime"]

[profile.release]
lto = true
strip = true

# codegen-units = 1 scoped to vertz-runtime only (not workspace-wide).
# Workspace-wide would force single-threaded codegen for deno_core's
# massive dependency tree, doubling CI build times for marginal gain.
[profile.release.package.vertz-runtime]
codegen-units = 1
