[package]
name = "chromium-poc"
version = "0.0.0"
edition = "2021"
publish = false
description = "Throwaway POC for Issue #2865 — validates chromiumoxide as the Rust Chromium client for headless screenshots in vtz."

# Standalone workspace — keeps heavy POC deps out of the real vtz workspace.
[workspace]

[profile.release]
lto = true
strip = true

[dependencies]
chromiumoxide = { version = "0.9", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs", "net", "io-util"] }
futures = "0.3"
anyhow = "1"
serde_json = "1"

[[bin]]
name = "chromium-poc"
path = "src/main.rs"
