[package]
name = "vertz-compiler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8.3", features = ["serde-json"] }
napi-derive = "3.5.2"
oxc_allocator = "0.122.0"
oxc_ast = "0.122.0"
oxc_ast_visit = "0.122.0"
oxc_codegen = "0.122.0"
oxc_parser = "0.122.0"
oxc_span = "0.122.0"
oxc_syntax = "0.122.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2.3.1"
