[package]
name = "vertz-runtime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vertz-runtime"
path = "src/main.rs"

[dependencies]
axum = "0.7"
clap = { version = "4", features = ["derive"] }
local-ip-address = "0.6"
owo-colors = "4"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "compression-gzip"] }
vertz-compiler-core = { path = "../vertz-compiler-core" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full", "test-util"] }
