[package]
name = "vertz-runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "vertz_runtime"
path = "src/lib.rs"

[[bin]]
name = "vertz-runtime"
path = "src/main.rs"

[dependencies]
async-recursion = "1"
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
deno_core = "0.311.0"
flate2 = "1"
futures-util = "0.3"
glob = "0.3"
indicatif = "0.17"
local-ip-address = "0.6"
node-semver = "2"
notify = "6"
owo-colors = "4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "compression-gzip"] }
uuid = { version = "1", features = ["v4"] }
vertz-compiler-core = { path = "../vertz-compiler-core" }
which = "7"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-tungstenite = "0.24"
