[package]
name = "vtz"
version = "0.2.54"
edition = "2021"

[lib]
name = "vertz_runtime"
path = "src/lib.rs"

[[bin]]
name = "vtz"
path = "src/main.rs"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
clap = { version = "4", features = ["derive"] }
bitvec = "1"
crossbeam-channel = "0.5"
deno_core = "0.311.0"
smallvec = "1"
flate2 = "1"
fs2 = "0.4"
futures = "0.3"
futures-util = "0.3"
http-body-util = "0.1"
glob = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
humantime = "2"
libc = "0.2"
walkdir = "2"
indicatif = "0.17"
local-ip-address = "0.6"
node-semver = "2"
notify = "6"
owo-colors = "4"
base64 = "0.22"
rand = "0.8"
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rsa = { version = "0.9", features = ["sha2"] }
skrifa = "0.26"
woff2-patched = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
similar = "2"
sha2 = "0.10"
url = "2"
tar = "0.4"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "compression-gzip", "cors"] }
uuid = { version = "1", features = ["v4"] }
vertz-compiler-core = { path = "../vertz-compiler-core" }
wry = { version = "0.49", optional = true }
tao = { version = "0.32", optional = true, features = ["rwh_06"] }
which = "7"
zstd = "0.13"
oxc_transformer = "0.122.0"
oxc_allocator = "0.122.0"
oxc_parser = "0.122.0"
oxc_span = "0.122.0"
oxc_codegen = "0.122.0"
oxc_semantic = "0.122.0"

[features]
default = []
desktop = ["wry", "tao"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }

[[example]]
name = "webview_poc"
required-features = ["desktop"]

[[bench]]
name = "crud_benchmark"
harness = false

[[bench]]
name = "signal_graph"
harness = false
